- Added SR security configs - rewrote demo scenarios