@@ -3,6 +3,7 @@ package net.christophschubert.kafka.connect.converter;
 import io.confluent.kafka.schemaregistry.SchemaProvider;
 import io.confluent.kafka.schemaregistry.avro.AvroSchemaProvider;
 import io.confluent.kafka.schemaregistry.client.CachedSchemaRegistryClient;
+import io.confluent.kafka.schemaregistry.client.SchemaRegistryClientConfig;
 import io.confluent.kafka.schemaregistry.json.JsonSchemaProvider;
 import io.confluent.kafka.schemaregistry.protobuf.ProtobufSchemaProvider;
 import org.apache.kafka.common.config.ConfigDef;
@@ -16,11 +17,7 @@ import org.apache.kafka.connect.storage.Converter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -42,12 +39,30 @@ public class SchemaIdRewriteConverter implements Converter {
     //TODO: add config properties for schema registry (e.g. authentication)
     //could be modeled after: https://github.com/confluentinc/schema-registry/blob/master/schema-serializer/src/main/java/io/confluent/kafka/serializers/AbstractKafkaSchemaSerDeConfig.java
     private final static ConfigDef configDef = new ConfigDef()
-            .define(SOURCE_SCHEMA_REGISTRY_URL_CONFIG, Type.STRING, Importance.HIGH, "source schema registry URL")
-            .define(DESTINATION_SCHEMA_REGISTRY_URL_CONFIG, Type.STRING, Importance.HIGH, "destination schema registry URL")
             .define(FAIL_ON_UNKNOWN_MAGIC_BYTE_CONFIG, Type.BOOLEAN, true, Importance.MEDIUM, "should converter fail on an unknown magic byte")
             .define(TOPIC_INCLUDE_CONFIG, Type.LIST, Importance.MEDIUM, "List of topics for which schemas will be rewritten. " + exclusionMessage)
             .define(TOPIC_EXCLUDE_CONFIG, Type.LIST, Importance.MEDIUM, "List of topics for which schemas will not be rewritten. " + exclusionMessage)
             .define(TOPIC_REGEX_CONFIG, Type.STRING, Importance.MEDIUM, "Pattern on which topics whose schema IDs will be rewritten should be matched. " + exclusionMessage);
+
+    public static final String SOURCE_PREFIX = "source.";
+    public static final String DESTINATION_PREFIX = "destination.";
+
+    static {
+        addSchemaRegistryConfig(configDef, SOURCE_PREFIX);
+        SchemaRegistryClientConfig.withClientSslSupport(configDef, SOURCE_PREFIX + SchemaRegistryClientConfig.CLIENT_NAMESPACE);
+        addSchemaRegistryConfig(configDef, DESTINATION_PREFIX);
+        SchemaRegistryClientConfig.withClientSslSupport(configDef, DESTINATION_PREFIX + SchemaRegistryClientConfig.CLIENT_NAMESPACE);
+    }
+
+    private static void addSchemaRegistryConfig(ConfigDef configDef, String namespace) {
+        final var prefix = namespace + SchemaRegistryClientConfig.CLIENT_NAMESPACE;
+        //TODO: add docu-strings
+        configDef.define(prefix + "url", Type.STRING, Importance.HIGH, namespace + " schema registry URK");
+        configDef.define(prefix + SchemaRegistryClientConfig.BASIC_AUTH_CREDENTIALS_SOURCE, Type.STRING, Importance.MEDIUM, "TODD");
+        configDef.define(prefix + SchemaRegistryClientConfig.USER_INFO_CONFIG, Type.STRING, Importance.MEDIUM, "TODO");
+        configDef.define(prefix + SchemaRegistryClientConfig.BEARER_AUTH_TOKEN_CONFIG, Type.STRING, Importance.MEDIUM, "TODO");
+        configDef.define(prefix + SchemaRegistryClientConfig.BEARER_AUTH_CREDENTIALS_SOURCE, Type.STRING, Importance.MEDIUM, "TODO");
+    }
 
     private SchemaIdRewriter rewriter;
     private Predicate<String> topicNameFilter = s -> true;
@@ -82,20 +97,25 @@ public class SchemaIdRewriteConverter implements Converter {
         }
 
         rewriter = new SchemaIdRewriter(
-                buildSrClient(configs.get(SOURCE_SCHEMA_REGISTRY_URL_CONFIG).toString()),
-                    buildSrClient(configs.get(DESTINATION_SCHEMA_REGISTRY_URL_CONFIG).toString()),
+                buildSrClient(configs, SOURCE_PREFIX),
+                    buildSrClient(configs, DESTINATION_PREFIX),
                     isKey,
-                    saveParseBoolean(configs.get(FAIL_ON_UNKNOWN_MAGIC_BYTE_CONFIG))
+                    saveParseBooleanDefaultTrue(configs.get(FAIL_ON_UNKNOWN_MAGIC_BYTE_CONFIG))
         );
     }
 
-    CachedSchemaRegistryClient buildSrClient(String url) {
-        return new CachedSchemaRegistryClient(List.of(url), 10, allProviders, null);
+    CachedSchemaRegistryClient buildSrClient(Map<String, ?> configs, String prefix) {
+        final List<String> urls = Arrays.asList(Objects.toString(configs.get(prefix + "schema.registry.url")).split(","));
+        final Map<String, ?> strippedConfigs = configs.entrySet().stream().filter(e -> e.getKey().startsWith(prefix)).collect(Collectors.toMap(e -> e.getKey().substring(prefix.length()), Map.Entry::getValue));
+
+        //logger.info("Building sr-client for prefix{} with configs {}", prefix, strippedConfigs);
+        return new CachedSchemaRegistryClient(urls, 10, allProviders, strippedConfigs);
     }
+
     //TODO: double check code & write test case
-    boolean saveParseBoolean(Object o) {
+    boolean saveParseBooleanDefaultTrue(Object o) {
         if (o == null) {
-            return false; // TODO: change to default value
+            return true;
         }
         if (o instanceof Boolean) {
             return (boolean) o;
